--- a/lw2/SurveyApp/templates/upload.html.twig
+++ b/lw2/SurveyApp/templates/upload.html.twig
@@ -5,6 +5,7 @@
         <title>Текущие значения</title>
     </head>
     <body>
+        <p>{{ alert }}</p>
         <p>First Name: {{ firstName }}</p>
         <p>Last Name: {{ lastName }}</p>
         <p>Age: {{ age }}</p>
