lw3 вынес повторяющися код в функцию

--- a/lw3/SurveyApp/templates/view.html.twig
+++ b/lw3/SurveyApp/templates/view.html.twig
@@ -5,7 +5,7 @@
         <title>Get form</title>
     </head>
     <body>
-        <form method="post" action="/view-form" enctype="multipart/form-data">
+        <form method="post" action="/view-user" enctype="multipart/form-data">
             <input type="email" name="email" placeholder="Email"><br>
             <input type="submit" value="Send Request">
         </form>
